removed sensor container class

--- a/app/views/folders.xml
+++ b/app/views/folders.xml
@@ -40,7 +40,7 @@
 	                    </View>
 					</ItemTemplate>
             		<ItemTemplate class="deviceItem" name="sensorTemplate">
-	                    <View class="horizontal sensorContainer">
+	                    <View class="horizontal">
 	                        <Label bindId="sensorLbl" class="deviceItemLbl"/>
 	                        <Label bindId="sensorLblStatus" />
                             <View top="20%" width="Ti.UI.SIZE" class="horizontal">
@@ -88,7 +88,7 @@
 	                    </View>
 					</ItemTemplate>
             		<ItemTemplate class="deviceItem" name="sensorTemplate">
-	                    <View class="horizontal sensorContainer">
+	                    <View class="horizontal">
 	                        <Label bindId="sensorLbl" class="deviceItemLbl"/>
 	                        <Label bindId="sensorLblStatus" />
                             <View top="20%" width="Ti.UI.SIZE" class="horizontal">
@@ -134,7 +134,7 @@
 	                    </View>
 					</ItemTemplate>
             		<ItemTemplate class="deviceItem" name="sensorTemplate">
-	                    <View class="horizontal sensorContainer">
+	                    <View class="horizontal">
 	                        <Label bindId="sensorLbl" class="deviceItemLbl"/>
 	                        <Label bindId="sensorLblStatus" />
                             <View top="20%" width="Ti.UI.SIZE" class="horizontal">
@@ -180,7 +180,7 @@
 	                    </View>
 					</ItemTemplate>
             		<ItemTemplate class="deviceItem" name="sensorTemplate">
-	                    <View class="horizontal sensorContainer">
+	                    <View class="horizontal">
 	                        <Label bindId="sensorLbl" class="deviceItemLbl"/>
 	                        <Label bindId="sensorLblStatus" />
                             <View top="20%" width="Ti.UI.SIZE" class="horizontal">
