Made templates consistent for all of the views.

--- a/app/views/folders.xml
+++ b/app/views/folders.xml
@@ -73,7 +73,7 @@
 	                </ItemTemplate>
 	            	<ItemTemplate class="deviceItem" name="sceneTemplate">
 	                    <View class="horizontal sceneContainer">
-	                        <Label bindId="sceneLbl" class="deviceItemLbl"/>
+	                        <Label bindId="label" class="deviceItemLbl"/>
 	                        <Button bindId="sceneBtnOn" class="sceneBtn" onClick="sceneOnBtn"/>
 	                        <Button bindId="sceneBtnOff" class="sceneBtn" onClick="sceneOffBtn"/>
 	                    </View>
@@ -99,10 +99,10 @@
 					</ItemTemplate>
             		<ItemTemplate class="deviceItem" name="sensorTemplate">
 	                    <View class="horizontal">
-	                        <Label bindId="sensorLbl" class="deviceItemLbl"/>
+	                        <Label bindId="label" class="deviceItemLbl"/>
 	                        <Label bindId="sensorLblStatus" />
                             <View top="20%" width="Ti.UI.SIZE" class="horizontal">
-	                        	<Switch left="5%" bindId="sensorSwitch" />
+	                        	<Switch touchEnabled="false" left="5%" bindId="sensorSwitch" />
 	                        	<Label left="10%" bindId="sensorLblStatus" color="white" />	
                        	 	</View>
 	                    </View>
@@ -124,7 +124,7 @@
 	                </ItemTemplate>
 	            	<ItemTemplate class="deviceItem" name="sceneTemplate">
 	                    <View class="horizontal sceneContainer">
-	                        <Label bindId="sceneLbl" class="deviceItemLbl"/>
+	                        <Label bindId="label" class="deviceItemLbl"/>
 	                        <Button bindId="sceneBtnOn" class="sceneBtn" onClick="sceneOnBtn"/>
 	                        <Button bindId="sceneBtnOff" class="sceneBtn" onClick="sceneOffBtn"/>
 	                    </View>
@@ -150,10 +150,10 @@
 					</ItemTemplate>
             		<ItemTemplate class="deviceItem" name="sensorTemplate">
 	                    <View class="horizontal">
-	                        <Label bindId="sensorLbl" class="deviceItemLbl"/>
+	                        <Label bindId="label" class="deviceItemLbl"/>
 	                        <Label bindId="sensorLblStatus" />
                             <View top="20%" width="Ti.UI.SIZE" class="horizontal">
-	                        	<Switch left="5%" bindId="sensorSwitch" />
+	                        	<Switch touchEnabled="false" left="5%" bindId="sensorSwitch" />
 	                        	<Label left="10%" bindId="sensorLblStatus" color="white" />	
                        	 	</View>
 	                    </View>
@@ -175,7 +175,7 @@
 	                </ItemTemplate>
 	            	<ItemTemplate class="deviceItem" name="sceneTemplate">
 	                    <View class="horizontal sceneContainer">
-	                        <Label bindId="sceneLbl" class="deviceItemLbl"/>
+	                        <Label bindId="label" class="deviceItemLbl"/>
 	                        <Button bindId="sceneBtnOn" class="sceneBtn" onClick="sceneOnBtn"/>
 	                        <Button bindId="sceneBtnOff" class="sceneBtn" onClick="sceneOffBtn"/>
 	                    </View>
@@ -201,10 +201,10 @@
 					</ItemTemplate>
             		<ItemTemplate class="deviceItem" name="sensorTemplate">
 	                    <View class="horizontal">
-	                        <Label bindId="sensorLbl" class="deviceItemLbl"/>
+	                        <Label bindId="label" class="deviceItemLbl"/>
 	                        <Label bindId="sensorLblStatus" />
                             <View top="20%" width="Ti.UI.SIZE" class="horizontal">
-	                        	<Switch left="5%" bindId="sensorSwitch" />
+	                        	<Switch touchEnabled="false" left="5%" bindId="sensorSwitch" />
 	                        	<Label left="10%" bindId="sensorLblStatus" color="white" />	
                        	 	</View>
 	                    </View>
